Fix the z-index bug in safari

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     height: 60px;
     border-radius: 60px;
     transition: all 0.3s ease;
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     z-index: 10;
     box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
@@ -85,7 +85,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     z-index: 9;
     box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
 }
@@ -111,7 +111,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     z-index: 9;
     box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
 }
@@ -137,7 +137,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     z-index: 9;
     box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.2);
 }
